--- a/web-apps/Important_Links.html
+++ b/web-apps/Important_Links.html
@@ -79,6 +79,13 @@
 <li><a href="./Day_16.html" title="Day 16" class="page">Day 16</a></li>
 <li><a href="./Day_17.html" title="Day 17" class="page">Day 17</a></li>
 <li><a href="./Day_18.html" title="Day 18" class="page">Day 18</a></li>
+<li><a href="./Day_19.html" title="Day 19" class="page">Day 19</a></li>
+<li><a href="./Day_20.html" title="Day 20" class="page">Day 20</a></li>
+<li><a href="./Day_21.html" title="Day 21" class="page">Day 21</a></li>
+<li><a href="./Day_22.html" title="Day 22" class="page">Day 22</a></li>
+<li><a href="./Day_23.html" title="Day 23" class="page">Day 23</a></li>
+<li><a href="./Day_24.html" title="Day 24" class="page">Day 24</a></li>
+<li><a href="./Day_25.html" title="Day 25" class="page">Day 25</a></li>
 <li><a href="./Exam_II_Review.html" title="Exam II Review" class="page">Exam II Review</a></li>
 <li><b>Important Links</b></li>
 <li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
